syntax = "proto3";
package cb;

service Inference {
    rpc Predict(PredictRequest) returns (PredictResponse);
}

message PredictRequest {
    repeated Features features = 1;
}

message Features {
    string cat_feature1 = 1;
    string cat_feature2 = 2;
    string cat_feature3 = 3;
    float float_feature4 = 4;
    float float_feature5 = 5;
}

message PredictResponse {
    repeated Prediction predictions = 1;
    uint64 preprocess_latency = 2;
    uint64 model_latency = 3;
}

message Prediction {
    float score = 1;
}
